Animations & Result Flickering Fix

--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -141,3 +141,10 @@
   -o-transition : all 0.2s ease-out !important;
   transition : all 0.2s ease-out !important;
 }
+
+.slideIn {
+  transition: 0.7s !important;
+  -moz-transition: 0.7s !important;
+  left: 0 !important;
+  opacity:1 !important;
+}
